# px4-secure-state-reconstruction

./: .gitignore  .gitmodules  Dockerfile  README.md
px4_offboard_control/: CMakeLists.txt  compile_commands.json  package.xml
px4_offboard_control/config/: attacker_params.yaml
px4_offboard_control/launch/: module_launch.py
px4_offboard_control/msg/: TimestampedArray.msg
px4_offboard_control/scripts/: drone_system.py  state_estimator.py
px4_offboard_control/src/: attacker.cpp  ekf_2.cpp  gz_test.cpp  offboard_control.cpp  offboard_control_xvel.cpp  offboard_test.cpp  sensor_matrix_downsampler.cpp  sensor_repackager.cpp  square_acceleration_motion.cpp  square_velocity_motion.cpp
px4_ssr/: package.xml  setup.cfg  setup.py
px4_ssr/launch/: ssr_launch.py
px4_ssr/px4_ssr/: drone_system.py  safe_controller.py  state_estimator.py
